@@ -1,3 +1,8 @@
+2007-01-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/CiscoIOS.pm (checkdevtype):
+	New discovery parameter: CiscoIOS::enable-vlan-interfaces
+
 2006-12-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/JunOS.pm:
